<?xml version="1.0" encoding="utf-8"?>
<!--  
	  @author Marco Rinalducci
	  @version 1.0.0 

	  Copyright (C) 2013 The Android Open Source Project

      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_dev"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:paddingTop="10dp"
						android:text="@string/legals_title_dev"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/dev"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="6dp"
						android:paddingTop="10dp"
						android:text="@string/legals_dev"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_year"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:text="@string/legals_title_year"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/year"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="6dp"
						android:text="@string/legals_year"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_version"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:text="@string/legals_title_version"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/version"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="6dp"
						android:text=""
						android:textAppearance="?android:attr/textAppearanceLarge"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_build"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:text="@string/legals_title_build"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/build"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="6dp"
						android:text=""
						android:textAppearance="?android:attr/textAppearanceLarge"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_packages"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:text="@string/legals_title_package"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/packages"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="6dp"
						android:text=""
						android:textAppearance="?android:attr/textAppearanceLarge"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView
						android:id="@+id/_uses"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#0A539C"
						android:paddingLeft="4dp"
						android:text="@string/legals_title_uses"
						android:textAppearance="?android:attr/textAppearanceLarge"/>

				<TextView
						android:id="@+id/uses"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:autoLink="web"
						android:paddingLeft="6dp"
						android:paddingBottom="10dp"
						android:text="@string/legals_uses"
						android:textAppearance="?android:attr/textAppearanceSmall"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="1"
				android:gravity="bottom">

			<TextView
					android:id="@+id/infos"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:autoLink="web"
					android:paddingTop="10dp"
					android:paddingLeft="4dp"
					android:paddingBottom="10dp"
					android:text="@string/legals_copyright"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

		</LinearLayout>
	</LinearLayout>
</ScrollView>